FILE(GLOB RENDERER_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB RENDERER_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

# Library target.
ADD_LIBRARY(fragcore-render-interface ${RENDERER_SOURCE_FILES} ${RENDERER_HEADER_FILES})
TARGET_LINK_LIBRARIES(fragcore-render-interface fragcore freeimage) #
TARGET_COMPILE_DEFINITIONS(fragcore-render-interface PRIVATE FRAG_CORE_INTERNAL_IMP=1)

#
TARGET_INCLUDE_DIRECTORIES(fragcore-render-interface PUBLIC
											$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
											$<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)

ADD_DEPENDENCIES(fragcore-render-interface fragcore )

#
IF(BUILD_WITH_INSTALL)
    INSTALL(TARGETS fragcore-render-interface DESTINATION lib COMPONENT ${LIBFRAGCORE_COMPONENT})
ENDIF()

IF(CMAKE_TESTING_ENABLED)
	ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/test)
ENDIF()

