FILE(GLOB TASK_SCH_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB TASK_SCH_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

FIND_PACKAGE(OpenSSL REQUIRED)

IF(OPENSSL_FOUND)
	MESSAGE(STATUS "OpenSSL found: ${OPENSSL_LIBRARIES} -- ${OPENSSL_VERSION}")
ENDIF()

# Library target.
ADD_LIBRARY(fragcore-ssl ${TASK_SCH_SOURCE_FILES} ${TASK_SCH_HEADER_FILES})
TARGET_LINK_LIBRARIES(fragcore-ssl PUBLIC fragcore PRIVATE ${OPENSSL_CRYPTO_LIBRARY}) #
TARGET_COMPILE_DEFINITIONS(fragcore-ssl PRIVATE FRAG_CORE_INTERNAL_IMP=1)

IF (BUILD_SHARED_LIBS AND CMAKE_SIZEOF_VOID_P EQUAL 8)
	SET_PROPERTY(TARGET fragcore-ssl PROPERTY POSITION_INDEPENDENT_CODE ON)
ENDIF()

#
TARGET_INCLUDE_DIRECTORIES(fragcore-ssl PUBLIC
							${CMAKE_CURRENT_SOURCE_DIR}
							$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
							$<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> )
ADD_DEPENDENCIES(fragcore-ssl fragcore marl)

#
IF(BUILD_WITH_INSTALL)
    INSTALL(TARGETS fragcore-ssl ${OPENSSL_CRYPTO_LIBRARY} DESTINATION lib COMPONENT ${LIBFRAGCORE_COMPONENT})
ENDIF()
