ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/cube)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/video-texture)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/audio)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/rigidbody)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/triangle)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/serial)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/modbus)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/perlin)
