
FILE(GLOB IO_SERIAL_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

# Library target.
ADD_LIBRARY(fragcore-io-serial SHARED ${IO_SERIAL_SOURCE_FILES})
TARGET_LINK_LIBRARIES(fragcore-io-serial fragcore serialport) #
TARGET_COMPILE_DEFINITIONS(fragcore-io-serial PRIVATE FRAG_CORE_INTERNAL_IMP=1)
#
TARGET_INCLUDE_DIRECTORIES(fragcore-io-serial PUBLIC
							$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
							$<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> )
ADD_DEPENDENCIES(fragcore-io-serial fragcore)

#
IF(BUILD_WITH_INSTALL)
    INSTALL(TARGETS fragcore-io-serial DESTINATION lib COMPONENT ${LIBFRAGCORE_COMPONENT})
ENDIF()
