FILE(GLOB SOURCE_COMPRESSION_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_COMPRESSION_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)


FIND_PACKAGE(LZO QUIET)
FIND_PACKAGE(ZLIB)

# Library target.
ADD_LIBRARY(fragcore-compression SHARED ${SOURCE_COMPRESSION_FILES} ${HEADER_COMPRESSION_FILES})
TARGET_LINK_LIBRARIES(fragcore-compression fragcore bz2 lz4) #
TARGET_COMPILE_DEFINITIONS(fragcore-compression PRIVATE FRAG_CORE_INTERNAL_IMP=1)
TARGET_INCLUDE_DIRECTORIES(fragcore-compression PUBLIC
											$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
											$<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)

ADD_DEPENDENCIES(fragcore-compression fragcore )

IF (BUILD_SHARED_LIBS AND CMAKE_SIZEOF_VOID_P EQUAL 8)
	SET_PROPERTY(TARGET fragcore-compression PROPERTY POSITION_INDEPENDENT_CODE ON)
ENDIF()

#
IF(BUILD_WITH_INSTALL)
    INSTALL(TARGETS fragcore-compression DESTINATION lib COMPONENT ${LIBFRAGCORE_COMPONENT})
ENDIF()

IF(CMAKE_TESTING_ENABLED)
	ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/test)
ENDIF()
