
FILE(GLOB IONET_MODBUS_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB IONET_MODBUS_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

# Library target.
ADD_LIBRARY(fragcore-ionet-modbus SHARED ${IONET_MODBUS_SOURCE_FILES} ${IONET_MODBUS_HEADER_FILES})
TARGET_LINK_LIBRARIES(fragcore-ionet-modbus fragcore modbus) #
TARGET_COMPILE_DEFINITIONS(fragcore-ionet-modbus PRIVATE FRAG_CORE_INTERNAL_IMP=1)
#
TARGET_INCLUDE_DIRECTORIES(fragcore-ionet-modbus PUBLIC
							$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
							$<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> )
ADD_DEPENDENCIES(fragcore-ionet-modbus fragcore)

#
IF(BUILD_WITH_INSTALL)
    INSTALL(TARGETS fragcore-ionet-modbus DESTINATION lib COMPONENT ${LIBFRAGCORE_COMPONENT})
ENDIF()

IF(CMAKE_TESTING_ENABLED)
	ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/test)
ENDIF()
