
FILE(GLOB IONET_MODBUS_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB IONET_MODBUS_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

#
LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" )
INCLUDE(modbus)

# Library target.
ADD_LIBRARY(fragcore-ionet-modbus SHARED ${IONET_MODBUS_SOURCE_FILES} ${IONET_MODBUS_HEADER_FILES})
TARGET_LINK_LIBRARIES(fragcore-ionet-modbus PUBLIC fragcore PRIVATE modbus) #
TARGET_COMPILE_DEFINITIONS(fragcore-ionet-modbus PRIVATE FRAG_CORE_INTERNAL_IMP=1)

#
TARGET_INCLUDE_DIRECTORIES(fragcore-ionet-modbus PUBLIC
							$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
							$<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}> )

ADD_DEPENDENCIES(fragcore-ionet-modbus fragcore modbus)

IF (BUILD_SHARED_LIBS AND CMAKE_SIZEOF_VOID_P EQUAL 8)
	SET_PROPERTY(TARGET fragcore-ionet-modbus PROPERTY POSITION_INDEPENDENT_CODE ON)
ENDIF()

#
IF(BUILD_WITH_INSTALL)
    INSTALL(TARGETS fragcore-ionet-modbus DESTINATION lib COMPONENT ${LIBFRAGCORE_COMPONENT})
ENDIF()

IF(CMAKE_TESTING_ENABLED)
	ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/test)
	ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/samples)
ENDIF()
