
# GCC compiler flag options.
IF ((CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX) AND NOT CMAKE_COMPILER_IS_MINGW)

ENDIF ()

FIND_PACKAGE(OpenAL QUIET)

IF(OPENAL_FOUND)
    MESSAGE(STATUS "OpenAL found: ${OPENAL_LIBRARY}.")
ELSE()
    SET(OPENAL_INCLUDE_DIR  "")
ENDIF()

# Source files.
FILE(GLOB OPENAL_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB OPENAL_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_LIBRARY(fragcore-aal ${OPENAL_SOURCE_FILES} ${OPENAL_HEADER_FILES} )
TARGET_LINK_LIBRARIES(fragcore-aal PUBLIC fragcore PRIVATE ${OPENAL_LIBRARY} ${ALUT_LIBRARY})

TARGET_INCLUDE_DIRECTORIES(fragcore-aal PRIVATE ${ALUT_INCLUDE_DIR} ${OPENAL_INCLUDE_DIR})

ADD_DEPENDENCIES(fragcore-aal fragcore)

IF(BUILD_WITH_INSTALL)
	INSTALL(TARGETS fragcore-aal DESTINATION lib COMPONENT ${LIBFRAGCORE_COMPONENT})
ENDIF()
