
# Source files.
FILE(GLOB SOURCE_PHYSIC_BULLET_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_PHYSIC_BULLET_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

SET(PHYSX_INCLUDE_DIRS "")

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" )
INCLUDE(physx)


ADD_LIBRARY(fragcore-ppx ${SOURCE_PHYSIC_BULLET_FILES} ${HEADER_PHYSIC_BULLET_FILES})
TARGET_LINK_LIBRARIES(fragcore-ppx fragcore )
ADD_DEPENDENCIES(fragcore-ppx fragcore)

TARGET_INCLUDE_DIRECTORIES( fragcore-ppx PUBLIC "${PHYSX_INCLUDE_DIRS}" )

IF (BUILD_SHARED_LIBS AND CMAKE_SIZEOF_VOID_P EQUAL 8)
	SET_PROPERTY(TARGET fragcore-pbu PROPERTY POSITION_INDEPENDENT_CODE ON)
ENDIF()

INSTALL(TARGETS fragcore-ppx DESTINATION lib)