# Source files.
FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_LIBRARY(fragcore-prpc ${SOURCE_FILES} ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(fragcore-prpc PVEngine)
ADD_DEPENDENCIES(fragcore-prpc fragview-core)
INSTALL(TARGETS fragcore-prpc DESTINATION lib)
