# Source files.
FILE(GLOB SOURCE_PHYSIC_RPC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_PHYSIC_RPC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_LIBRARY(fragcore-prpc ${SOURCE_PHYSIC_RPC_FILES} ${HEADER_PHYSIC_RPC_FILES})
TARGET_LINK_LIBRARIES(fragcore-prpc fragcore)
ADD_DEPENDENCIES(fragcore-prpc fragcore)

IF (BUILD_SHARED_LIBS AND CMAKE_SIZEOF_VOID_P EQUAL 8)
	SET_PROPERTY(TARGET fragcore-prpc PROPERTY POSITION_INDEPENDENT_CODE ON)
ENDIF()

INSTALL(TARGETS fragcore-prpc DESTINATION lib)
