# Source files.
FILE(GLOB SOURCE_PHYSIC_RPC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_PHYSIC_RPC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

ADD_LIBRARY(fragcore-physic-rpc  ${SOURCE_PHYSIC_RPC_FILES} ${HEADER_PHYSIC_RPC_FILES})
TARGET_LINK_LIBRARIES(fragcore-physic-rpc fragcore)
TARGET_INCLUDE_DIRECTORIES( fragcore-physic-bullet PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${BULLET_INCLUDE_DIRS})

ADD_DEPENDENCIES(fragcore-physic-rpc fragcore)

IF (BUILD_SHARED_LIBS AND CMAKE_SIZEOF_VOID_P EQUAL 8)
	SET_PROPERTY(TARGET fragcore-physic-rpc PROPERTY POSITION_INDEPENDENT_CODE ON)
ENDIF()

INSTALL(TARGETS fragcore-physic-rpc DESTINATION lib)
