FILE(GLOB SHADER_COMPILER_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB SHADER_COMPILER_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

# Library target.
ADD_LIBRARY(fragcore-shader-compiler ${SHADER_COMPILER_SOURCE_FILES} ${SHADER_COMPILER_HEADER_FILES})
TARGET_LINK_LIBRARIES(fragcore-shader-compiler PUBLIC fragcore fragcore-imageloader spirv-cross-glsl spirv-cross-core spirv-cross-util) #
TARGET_COMPILE_DEFINITIONS(fragcore-shader-compiler PRIVATE FRAG_CORE_INTERNAL_IMP=1)

#
TARGET_INCLUDE_DIRECTORIES(fragcore-shader-compiler PUBLIC
											$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
											$<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)

ADD_DEPENDENCIES(fragcore-shader-compiler fragcore )

#
IF(BUILD_WITH_INSTALL)
    INSTALL(TARGETS fragcore-shader-compiler DESTINATION lib COMPONENT ${LIBFRAGCORE_COMPONENT})
ENDIF()

IF(CMAKE_TESTING_ENABLED)
	#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/test)
ENDIF()
