SET(OpenGL_GL_PREFERENCE "GLVND")
SET(GLEW_USE_STATIC_LIBS False)

##
FIND_PACKAGE(OpenGL QUIET)
FIND_PACKAGE(GLEW QUIET)
FIND_PACKAGE(OpenGLES QUIET)

FIND_PACKAGE(PkgConfig QUIET)
IF(PKG_CONFIG_FOUND)

ENDIF()

IF(GLEW_FOUND)
    MESSAGE(STATUS "Glew found: ${GLEW_LIBRARIES}.")
ELSE()
ENDIF()

IF(OPENGL_FOUND)
    MESSAGE(STATUS "OpenGL found: ${OPENGL_LIBRARIES}.")
ELSE()
ENDIF()

IF(OpenGLES_FOUND)
    MESSAGE(STATUS "OpenGLES found: ${OPENGLES_EGL_LIBRARY}.")
ELSE()
ENDIF()

# Source files.
FILE(GLOB SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

# Get the include directories for the target.
#get_target_property(Fragcore_INCLUDE_DIRS fragcore INCLUDE_DIRECTORIES)

set(CMAKE_CXX_VISIBILITY_PRESET default)
set(CMAKE_VISIBILITY_INLINES_HIDDEN 0)

#
ADD_LIBRARY(fragcore-rgl  MODULE ${SOURCE_FILES} ${HEADER_FILES} )
TARGET_LINK_LIBRARIES(fragcore-rgl fragcore  ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGLES_EGL_LIBRARY} )
TARGET_COMPILE_DEFINITIONS(fragcore-rgl PRIVATE FRAG_CORE_INTERNAL_IMP=1)

# OpenGL dependies headers.
TARGET_INCLUDE_DIRECTORIES(fragcore-rgl PRIVATE ${OPENGL_INCLUDE_DIR} ${GLEW_INCLUDE_DIRS} PUBLIC
											$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
											$<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
ADD_DEPENDENCIES(fragcore-rgl fragcore)

IF(BUILD_WITH_INSTALL)
    INSTALL(TARGETS fragcore-rgl DESTINATION lib COMPONENT ${LIBFRAGCORE_COMPONENT})
ENDIF()

IF(CMAKE_TESTING_ENABLED)
	ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/test)
ENDIF()
