
#
#

FIND_PACKAGE(SDL2 QUIET)

IF(NOT SDL2_FOUND)
	IF(PKG_CONFIG_FOUND)
		MESSAGE(STATUS "Found pkg-config: ${PKG_CONFIG_EXECUTABLE} -- version ${PKG_CONFIG_VERSION_STRING}.")
		PKG_CHECK_MODULES(SDL QUIET sdl2)
	ELSE()
		MESSAGE(WARNING "Could not find PKG ")
		# TODO add logic for handling if pkg-config not available.

	ENDIF()
ELSE()

ENDIF()



IF(SDL_FOUND)
	MESSAGE(STATUS "SDL2 found: ${SDL_LIBRARIES} -- ${SDL_VERSION_STRING} (${SDL_INCLUDE_DIRS})")
ENDIF()


FILE(GLOB SDL_WINDOW_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB SDL_WINDOW_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

# Core library for adding support for plugin.
ADD_LIBRARY(fragcore-window-sdl ${SDL_WINDOW_SOURCE_FILES} ${SDL_WINDOW_HEADER_FILES})
ADD_DEPENDENCIES( fragcore-window-sdl  fragcore )

#
TARGET_COMPILE_DEFINITIONS(fragcore-window-sdl PRIVATE FRAG_CORE_INTERNAL_IMP=1)

#
SET_TARGET_PROPERTIES(fragcore-window-sdl PROPERTIES
		COMPILE_FLAGS " ${SDL2_OTHER_CFLAGS}")

#
TARGET_LINK_LIBRARIES(fragcore-window-sdl PUBLIC fragcore PRIVATE ${SDL_LIBRARIES} )

#
TARGET_INCLUDE_DIRECTORIES(fragcore-window-sdl PRIVATE ${SDL_INCLUDE_DIRS} PUBLIC
											$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
											$<INSTALL_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
